Responsive yapısı tamamlandı

--- a/site.html
+++ b/site.html
@@ -6,14 +6,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Genesis Web Project</title>
 
+    <!-- Custom CSS -->
+    <link rel="stylesheet" type="text/css" href="./css/styles.css">
+
     <!-- FONT AWESOME KIT LINK -->
     <script src="https://kit.fontawesome.com/027d3564f6.js" crossorigin="anonymous"></script>
 
     <!-- FANCYBOX CSS -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/fancyapps/fancybox@3.5.7/dist/jquery.fancybox.min.css" />
 
-    <!-- Custom CSS -->
-    <link rel="stylesheet" type="text/css" href="./css/styles.css">
 </head>
 
 <body>
@@ -114,13 +115,17 @@
                     <h2 class="vertical-title vertical-title-right ani-delay-2 ani-left">THE SKILLS</h2>
                     <div class="services-detail ani-delay ani-right">
                         <div id="services-slider">
-                            <div class="services-slide services-slide-1">
+                            <div class="services-slide">
                                 <h2 class="horizontal-title light-color">OUR SERVICES 1</h2>
-                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Similique voluptates eveniet officia, laboriosam, harum cupiditate dolore numquam incidunt rerum ducimus vero nostrum error impedit, praesentium sed molestias quos!</p>
+                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Similique voluptates eveniet officia, laboriosam, ducimus vero nostrum error impedit, praesentium sed molestias quos!</p>
                             </div>
-                            <div class="services-slide services-slide-2">
+                            <div class="services-slide">
                                 <h2 class="horizontal-title light-color">OUR SERVICES 2</h2>
-                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Similique voluptates eveniet officia, laboriosam, harum cupiditate dolore numquam incidunt rerum ducimus vero nostrum error impedit, praesentium sed molestias quos!</p>
+                                <p> consectetur adipisicing elit. Similique voluptates eveniet officia, laboriosam, harum cupiditate dolore numquam incidunt rerum ducimus vero nostrum error impedit, praesentium sed molestias quos!</p>
+                            </div>
+                            <div class="services-slide">
+                                <h2 class="horizontal-title light-color">OUR SERVICES 3</h2>
+                                <p>Similique voluptates eveniet officia, laboriosam, harum cupiditate dolore numquam incidunt rerum ducimus vero nostrum error impedit, praesentium sed molestias quos!</p>
                             </div>
                         </div>
                         <div class="btn-arrows">
